--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 
 body {
   background-color: $bg-color;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 * {
